--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>jena</artifactId>
         <groupId>org.apache.jena</groupId>
-        <version>3.16.0-SNAPSHOT</version>
+        <version>3.16.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -19,43 +19,92 @@
     </properties>
 
     <dependencies>
+
         <dependency>
             <groupId>org.apache.jena</groupId>
-            <artifactId>apache-jena-libs</artifactId>
+            <artifactId>jena-shacl</artifactId>
+            <version>3.16.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-tdb</artifactId>
             <version>3.16.0-SNAPSHOT</version>
-            <type>pom</type>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/jena-tdb-3.16.0-SNAPSHOT.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-tdb2</artifactId>
+            <version>3.16.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/jena-tdb2-3.16.0-SNAPSHOT.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-dboe-base</artifactId>
+            <version>3.16.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-dboe-index</artifactId>
+            <version>3.16.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-dboe-index-test</artifactId>
+            <version>3.16.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-dboe-trans-data</artifactId>
+            <version>3.16.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-dboe-storage</artifactId>
+            <version>3.16.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.jena</groupId>
+            <artifactId>jena-rdfconnection</artifactId>
+            <version>3.16.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-cmds</artifactId>
             <version>3.16.0-SNAPSHOT</version>
+            <scope>system</scope>
+            <systemPath>${basedir}/lib/jena-cmds-3.16.0-SNAPSHOT.jar</systemPath>
         </dependency>
         <!-- Pull test code into scope -->
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-base</artifactId>
-            <version>3.16.0-SNAPSHOT</version>
+            <version>3.16.0</version>
             <classifier>tests</classifier>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-core</artifactId>
-            <version>3.16.0-SNAPSHOT</version>
+            <version>3.16.0</version>
             <classifier>tests</classifier>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-arq</artifactId>
-            <version>3.16.0-SNAPSHOT</version>
+            <version>3.16.0</version>
             <classifier>tests</classifier>
             <optional>true</optional>
         </dependency>
         <dependency>
             <groupId>org.apache.jena</groupId>
             <artifactId>jena-shacl</artifactId>
-            <version>3.16.0-SNAPSHOT</version>
+            <version>3.16.0</version>
             <classifier>tests</classifier>
             <optional>true</optional>
         </dependency>
